--- a/SMSP/smsp.tex
+++ b/SMSP/smsp.tex
@@ -158,7 +158,7 @@ We can use a compact notation (took from Norris textbook)
 \begin{proposition}{\enf{Chapman-Kolmogorov equations:}}
     for all $e$, $m \in \mathbb{Z}_+$
     \begin{equation}\label{chapkolm}
-        p_{ij}^{(e+m}=\sum_{k<j}p_{ik}^{(e)}\cdot p_{kj}^{(m)}
+        p_{ij}^{(e+m)}=\sum_{k<j}p_{ik}^{(e)}\cdot p_{kj}^{(m)}
     \end{equation}
 \end{proposition}
 The proof is left as exercise (use graphical intuition below: marginalize out unwanted states and use Markov property). 
@@ -168,7 +168,7 @@ The proof is left as exercise (use graphical intuition below: marginalize out un
     \label{mc graph} %porcoddio sono un cazzo di dragooOOO
 \end{figure}
 
-If you take the transition matrix to the power of $k$, $P^k$ is still a stochastic matrix and the entries are $p_{ij}^(k)$.
+If you take the transition matrix to the power of $k$, $P^k$ is still a stochastic matrix and the entries are $p_{ij}^{(k)}$.
 \begin{example}
     \begin{figure}[H]
     \centering
@@ -330,7 +330,7 @@ So the process is a Markov chain.
 \begin{proof2}
     Let 
     \[
-    g_{z}(s)=\ev{e^{sZ}}
+    g_{Z}(s)=\ev{e^{sZ}}
     \]
     be the moment generating function of $Z$. We are interested in the moment generating function of $X_1|X_0=i$.
     \begin{align*}
@@ -411,7 +411,7 @@ Let $X_n$ be the number of type-0 individuals at time $n$. The individuals at ge
 \end{itemize}
 So every member of a generation chooses its parent by a Bernoulli trial \sott{independently}. Since we have $N$ Bernoulli trial with parameter $p=\frac{X_n}{N}$, we have that:
 \[
-X_n|X_{n-1}\sim Binom(N,\frac{X_{n-1}}{N}).
+X_n|X_{n-1}\sim \mathsf{Binom}\left(N,\frac{X_{n-1}}{N}\right).
 \]
 Note that 
 \begin{align*}
@@ -430,7 +430,7 @@ Note that
             },
                 ylabel=\empty,
                 xmin=0, xmax=52,
-                ymin=0, ymax=100,
+                ymin=0, ymax=55,
                 axis y line=left,
                 y axis line style={opacity=0},
                 ytick=\empty,
@@ -2404,7 +2404,7 @@ For example, the multicomponent Gibbs sampler (with deterministic visits to coor
 
 %Esempio di un metodo con nome lungo
 This method aims to update $k$ coordinates; when one of them is difficult to update it uses a Metropolis step to do it. \\
-\includepdf[pages=-,pagecommand={}]{external/fake conv}
+\includepdf[pages=-,pagecommand={}]{drawings/fake conv}
 Extensions and other methods:
 \begin{itemize}
     \item \textbf{Reversible jump MCMC}: it moves among spaces of different dimensions.  
